# cse223b-proj

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  allocator.py  allocator_tests.py  claude.md  control_plane.py  control_plane_tests.py  repopack.config.json
docs/: IMPLEMENTATION.md  placement-mapping.md
docs/adr/: 0001-paused-request-failure-model.md  0002-blocking-expert-migration.md  0003-static-planned-expert-load.md  0004-layer-specific-expert-placement.md  0005-locality-first-replica-routing.md  0006-contiguous-rank-block-node-mapping.md  0007-block-on-unavailable-layer-experts.md  0007-fail-on-unservable-layer-expert.md  0008-repair-toward-planned-placement.md  0010-immediate-repair-migration.md  (+25 more)
experiments/: aggregate.py  eval_cli.py
images/: benefit_vs_storage_clean.csv  topology_recover_2x2.csv
scenario_experiments/: .gitignore  README.md  analyze_results.py  run_experiments.py
topsim/: README.md  pyproject.toml
topsim/demo/: failed_gpu7_repaired_matrix.txt  healthy_matrix.txt  replicated_matrix.txt  scenario_manifest.jsonl
topsim/results/: mmlu_partial.json  scenarios.json
topsim/src/toposim/: __init__.py  analysis.py  batch_cli.py  cli.py  manifest.py  metrics.py  report.py  routing.py  schedule.py  timeline.py  timeline_cli.py  topology.py  traffic.py  units.py
topsim/src/toposim/engine/: fluid_model.py  stage_model.py
topsim/src/toposim/policies/: __init__.py  direct.py  fast.py  fuselink_heuristic.py  spreadout.py
traffic-gen/: CONTEXT.md  README.md  generate.py  generate_scenario.py  lazarus_plan.py  scenario_tests.py  vis.py
(+429 files in other folders)
